--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -56,7 +56,7 @@
 
         <h2>4. Contact Information</h2>
         <p>For inquiries regarding our privacy policy:</p>
-        <p>Email: baris.ariburnu@gmail.com</p>
+        <p>Email: barisariburnu@gmail.com</p>
         <p>GitHub: https://github.com/barisariburnu/fullpage-screenshot-chrome-extension</p>
 
         <h2>5. Policy Updates</h2>
